k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldmap-front
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worldmap-front
  template:
    metadata:
      labels:
        name: worldmap-front
    spec:
      containers:
      - name: worldmap-front
        image: quay.io/rhte2023edgelab/worldmap-front:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
      terminationGracePeriodSeconds: 30
